--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@carbon/react": "^1.17.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/carbon-components-react": "^7.55.2",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.1.3",
+    "carbon-components": "^10.58.3",
+    "carbon-components-react": "^8.17.0",
+    "carbon-icons": "^7.0.7",
     "js-event-bus": "^1.1.1",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
