--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "carbon-components": "^10.58.3",
     "carbon-components-react": "^8.17.0",
     "carbon-icons": "^7.0.7",
+    "eslint-plugin-react": "^7.31.11",
     "js-event-bus": "^1.1.1",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
@@ -26,7 +27,9 @@
     "react-scripts": "5.0.1",
     "sass": "^1.56.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
