--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "airboy-portal",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://airboyconsole.github.io/AirBoy-forum-frontend/",
+  "homepage": "",
   "dependencies": {
     "@carbon/react": "^1.17.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -15,7 +15,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-snapshot": "^1.3.0",
-    "axios": "^1.1.3",
+    "axios": "^1.2.2",
     "carbon-components": "^10.58.3",
     "carbon-components-react": "^8.17.0",
     "carbon-icons": "^7.0.7",
@@ -24,9 +24,11 @@
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.42.1",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "sass": "^1.56.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
