--- a/package.json
+++ b/package.json
@@ -13,21 +13,25 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-snapshot": "^1.3.0",
     "axios": "^1.2.2",
     "carbon-components": "^10.58.3",
     "carbon-components-react": "^8.17.0",
     "carbon-icons": "^7.0.7",
+    "draft-js": "^0.11.7",
     "eslint-plugin-react": "^7.31.11",
     "js-event-bus": "^1.1.1",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
+    "react-quill": "^2.0.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-tag-input-component": "^2.0.2",
     "react-toastify": "^9.1.1",
     "sass": "^1.56.1",
     "typescript": "^4.9.4",
