--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@carbon/react": "^1.17.0",
+    "@hookform/resolvers": "^2.9.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -23,6 +24,7 @@
     "eslint-plugin-react": "^7.31.11",
     "js-event-bus": "^1.1.1",
     "node-sass": "^8.0.0",
+    "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
@@ -36,7 +38,8 @@
     "typescript": "^4.9.4",
     "web-vitals": "^3.1.1",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
+    "webpack-cli": "^5.0.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "predeploy": "yarn build",
