--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
-  "name": "airboy-portal",
+  "name": "Airboy-forum",
   "version": "0.1.0",
-  "private": true,
+  "description": "Airboy forum is an public forum to Airboy console. It provides access to open source games to Airboy console",
+  "keywords": [
+    "games",
+    "airboy",
+    "forum",
+    "console",
+    "open-source"
+  ],
+  "author": "Michal Chruscielski <michal@chruscielski.com> (https://chruscielski.com/)",
+  "license": "UNLICENSED",
+  "private": false,
   "dependencies": {
     "@carbon/react": "^1.17.0",
     "@hookform/resolvers": "^2.9.10",
@@ -28,6 +38,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
