--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "UNLICENSED",
   "private": false,
   "dependencies": {
+    "@carbon/icons": "^11.16.1",
     "@carbon/react": "^1.17.0",
     "@hookform/resolvers": "^2.9.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/carbon-components-react": "^7.55.2",
+    "@types/carbon__icons-react": "^11.15.0",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.0",
